@@ -1,5 +1,10 @@
 2007-10-24  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-dbus-settings.c
+		- (file_to_g_byte_array): handle PEM format certificates too
+
+2007-10-24  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.c
 		- (add_seen_bssid): don't segfault when the AP's bssid isn't valid
 
